--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "gym-ts",
   "private": true,
@@ -15,7 +14,8 @@
     "framer-motion": "^11.12.0",
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
